too many changes again

--- a/angular.json
+++ b/angular.json
@@ -55,9 +55,11 @@
 							"projects/blog/src/assets"
 						],
 						"styles": [
+							"node_modules/materialize-css/dist/css/materialize.min.css",
 							"projects/common/src/assets/scss/responsive.scss",
-							"projects/common/src/assets/scss/grid.scss",
+							"projects/common/src/assets/scss/helpers.scss",
 							"projects/common/src/assets/scss/theme.scss",
+							"projects/common/src/styles.scss",
 							"projects/blog/src/styles.scss"
 						],
 						"scripts": []
@@ -193,7 +195,6 @@
 						],
 						"styles": [
 							"projects/common/src/assets/scss/responsive.scss",
-							"projects/common/src/assets/scss/grid.scss",
 							"projects/common/src/assets/scss/theme.scss",
 							"projects/login/src/styles.scss"
 						],
