--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.1",
-    "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
-    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "ngx-markdown": "^11.0.1",
+    "ngx-skeleton-loader": "^2.6.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
