--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-markdown": "^11.0.1",
+    "ngx-pagination": "^5.0.0",
     "ngx-skeleton-loader": "^2.6.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
