--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~11.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-cookie-service": "^11.0.2",
     "ngx-markdown": "^11.0.1",
     "ngx-pagination": "^5.0.0",
     "ngx-skeleton-loader": "^2.6.2",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
+    "@types/materialize-css": "^1.0.8",
     "@types/node": "^12.11.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
