--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
+    "angular2-moment": "^1.9.0",
     "jwt-decode": "^3.1.2",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-cookie-service": "^11.0.2",
