--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "typeRoots": ["projects/common/src/@types"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
