almost finished post edit page

--- a/angular.json
+++ b/angular.json
@@ -272,6 +272,7 @@
 							"projects/admin/src/assets"
 						],
 						"styles": [
+							"node_modules/simplemde/dist/simplemde.min.css",
 							"node_modules/materialize-css/dist/css/materialize.min.css",
 							"projects/common/src/assets/scss/responsive.scss",
 							"projects/common/src/assets/scss/materialize.scss",
