--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "angular2-moment": "^1.9.0",
     "jwt-decode": "^3.1.2",
     "materialize-css": "^1.0.0-rc.2",
+    "ng2-simplemde": "^2.1.0",
+    "ng2-tooltip-directive": "^2.9.22",
     "ngx-cookie-service": "^11.0.2",
     "ngx-markdown": "^11.0.1",
     "ngx-pagination": "^5.0.0",
