--- a/angular.json
+++ b/angular.json
@@ -146,19 +146,7 @@
 							"namedChunks": false,
 							"extractLicenses": true,
 							"vendorChunk": false,
-							"buildOptimizer": true,
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
-								}
-							]
+							"buildOptimizer": true
 						}
 					}
 				},
@@ -221,19 +209,7 @@
 							"namedChunks": false,
 							"extractLicenses": true,
 							"vendorChunk": false,
-							"buildOptimizer": true,
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
-								}
-							]
+							"buildOptimizer": true
 						}
 					}
 				},
@@ -299,19 +275,7 @@
 							"namedChunks": false,
 							"extractLicenses": true,
 							"vendorChunk": false,
-							"buildOptimizer": true,
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
-								}
-							]
+							"buildOptimizer": true
 						}
 					}
 				},
